--- a/client/package.json
+++ b/client/package.json
@@ -10,9 +10,11 @@
     "classnames": "^2.2.6",
     "firebase": "^6.2.3",
     "http-proxy-middleware": "^0.19.1",
+    "leaflet": "^1.5.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-icons": "^3.7.0",
+    "react-leaflet": "^2.4.0",
     "react-redux": "^7.1.0",
     "react-responsive-carousel": "^3.1.49",
     "react-router-dom": "^5.0.1",
@@ -26,11 +28,6 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
-  },
-  "proxy": {
-    "/api/": {
-      "target": "http://localhost:3002"
-    }
   },
   "eslintConfig": {
     "extends": "react-app"
