--- a/package.json
+++ b/package.json
@@ -26,7 +26,6 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.5.7",
     "multer": "^1.4.1",
-    "nodemon": "^1.19.0",
-    "redux": "^4.0.1"
+    "nodemon": "^1.19.0"
   }
 }
