--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "firebase": "^6.2.3",
     "http-proxy-middleware": "^0.19.1",
     "leaflet": "^1.5.1",
+    "qrcode.react": "^0.9.3",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-icons": "^3.7.0",
