--- a/client/package.json
+++ b/client/package.json
@@ -10,7 +10,9 @@
     "classnames": "^2.2.6",
     "firebase": "^6.2.3",
     "http-proxy-middleware": "^0.19.1",
+    "jquery": "^3.4.1",
     "leaflet": "^1.5.1",
+    "popper.js": "^1.15.0",
     "qrcode.react": "^0.9.3",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
