--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.5.7",
     "multer": "^1.4.1",
+    "nodemailer": "^6.3.0",
     "nodemon": "^1.19.0",
     "redux": "^4.0.1"
   }
